refactor: Board에 정적 팩터리 메서드 및 상수화 적용